# dapa-paper-wallet

./: .gitignore  README.md  build.sh  dev_server.sh  index.html
public/: index.css  index.html  index.js  lang.js  xelis_paper_wallet.js  xelis_paper_wallet_bg.wasm
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
xelis-paper-wallet/: Cargo.toml
xelis-paper-wallet/src/: lib.rs
