[package]
name = "xelis-paper-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
xelis-common = { package = "xelis_common", git = "https://github.com/xelis-project/xelis-blockchain", default-features = false, branch = "network-upgrade" }

[lib]
crate-type = ["cdylib", "rlib"]